--- a/Front-End-Projects/html-css-js-intro/css/styles.css
+++ b/Front-End-Projects/html-css-js-intro/css/styles.css
@@ -1,24 +1,23 @@
-/* Основные стили для элементов светофора */
 .trafficLight {
-    border-radius: 50%; /* Закругленные края, чтобы элементы выглядели как круги */
-    border: 2px solid black; /* Черная рамка вокруг каждого элемента */
-    height: 75px; /* Высота круга */
-    width: 75px; /* Ширина круга */
+    border-radius: 50%; /* Закругленные края, чтобы элементы выглядели кругами */
+    border: 2px solid black;
+    height: 200px;
+    width: 200px;
     margin: 20px auto; /* Выравнивание элементов по центру страницы */
     background-color: gray; /* Серый цвет для неактивных состояний */
 }
 
 /* Красный свет */
 .trafficLight-red {
-    background-color: red; /* Активное состояние для красного света */
+    background-color: red; /* Активно-красное состояние */
 }
 
 /* Желтый свет */
 .trafficLight-yellow {
-    background-color: yellow; /* Активное состояние для желтого света */
+    background-color: yellow; /* Активно-желтое состояние */
 }
 
 /* Зеленый свет */
 .trafficLight-green {
-    background-color: green; /* Активное состояние для зеленого света */
+    background-color: green; /* Активно-зеленоое состояние */
 }
