--- a/Front-End-Projects/html-css-js-intro/Areas/css/styles.css
+++ b/Front-End-Projects/html-css-js-intro/Areas/css/styles.css
@@ -11,8 +11,9 @@ body {
   display: flex;
   justify-content: center;
   align-items: center;
-  height: 100vh;
+  height: auto;
 }
+
 
 /* Стили таблицы */
 table {
