--- a/Front-End-Projects/html-css-js-intro/Media/css/styles.css
+++ b/Front-End-Projects/html-css-js-intro/Media/css/styles.css
@@ -25,11 +25,43 @@ header {
   align-items: flex-start;
 }
 
+/* Бокс для миниатюр */
+.thumbnail-box {
+  overflow: auto;
+}
+
+/* Альбомная ориентация (боковое размещение) */
+@media (min-aspect-ratio: 1/1) {
+  .thumbnail-box {
+    width: 150px;
+    height: 300px;
+  }
+}
+
+/* Вертикальная ориентация (нижнее размещение) */
+@media (max-aspect-ratio: 1/1) {
+  .container {
+    flex-direction: column;
+    align-items: center;
+  }
+  .thumbnail-box {
+    width: 400px;
+    height: 150px;
+  }
+}
+
 /* Кнопки-миниатюры */
 .thumbnails {
   display: flex;
   flex-direction: column;
   gap: 10px;
+}
+
+@media (max-aspect-ratio: 1/1) {
+  .thumbnails {
+    flex-direction: row;
+    justify-content: center;
+  }
 }
 
 .thumbnail {
@@ -79,13 +111,15 @@ header {
   height: 100%;
   object-fit: cover;
   border-radius: 15px;
+  /* Для эффекта растворения */
+  transition: opacity 1s;
 }
 
 /* Динамическое название изображения */
 .image-title-box {
   position: absolute;
-  bottom: -4px;
-  left: 50%;
+  bottom: 264px;
+  left: 10%;
   transform: translateX(calc(-50% - 3px));
   background-color: rgba(0, 0, 0, 0.7);
   color: white;
@@ -109,23 +143,16 @@ header {
   display: none;
 }
 
-/* Показываем текст при наведении */
 .image-container:hover .hover-text {
   display: block;
 }
 
-/* Вертикальная ориентация */
+/* Вертикальная ориентация персонально для контейнера */
 @media (max-aspect-ratio: 1/1) {
-  .container {
-      flex-direction: column;
-      align-items: center;
-  }
-  .thumbnails {
-      flex-direction: row;
-      justify-content: center;
-      order: 2;
-  }
   .image-container {
-      order: 1;
+    order: 1;
+  }
+  .thumbnail-box {
+    order: 2;
   }
 }
